--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,5 +29,5 @@
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700" rel="stylesheet">
-  <!-- <link rel="shortcut icon" href="../_favicon/favicon.png"> -->
+  <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/_favicon/favicon.ico">
 </head>
