--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -20,16 +20,16 @@ pre code {
   color: inherit;
   font-size: 100%;
   padding: 0;
-  font-size: 16px;
+  font-size: 13px;
 }
 
 .highlight {
   background-color: $grey-3;
-    border: 1px solid $grey-2-70;
+  border: 1px solid $grey-2-70;
   border-radius: 3px;
   line-height: 1.4;
   margin: 0 0 1rem;
-  padding: 1rem;
+  padding: 0.5em 1em;
 
   pre {
     margin-bottom: 0;
