--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -23,13 +23,17 @@ pre code {
   font-size: 13px;
 }
 
+.syntax {
+  line-height: 1.2;
+}
+
 .highlight {
   background-color: $grey-3;
   border: 1px solid $grey-2-70;
   border-radius: 3px;
   line-height: 1.4;
   margin: 0 0 1rem;
-  padding: 0.5em 1em;
+  padding: 1em;
 
   pre {
     margin-bottom: 0;
