--- a/_sass/_project.scss
+++ b/_sass/_project.scss
@@ -11,7 +11,7 @@
         }
 
         .project-img {
-            height: 300px;
+            max-height: 300px;
             margin: 0 auto;
             margin-bottom: 20px;
         }
