--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
     <meta property="og:type"            content="article" /> 
     <meta property="og:url"             content="{{ site.url }}{{ page.url }}" />
     
-    <meta property="og:image" content="{% if page.post-header == true or page.project-header == true %}{{ site.url }}{{ page.url }}{{ page.header-img }}{% else %}{{ site.url }}{{ '/img/share-img.jpg'}}{% endif %}">
+    <meta property="og:image" content="{% if page.post-header == true or page.project-header == true %}{{ site.url }}{{ page.url }}{{ page.header-img }}{% else %}{{ site.url }}{{'/meta/share_image.png'}}{% endif %}">
 
     <meta name="twitter:card" content="summary_large_image"> 
     
@@ -29,5 +29,5 @@
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700" rel="stylesheet">
-  <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/_favicon/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="/meta/favicon.ico">
 </head>
