--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,17 +13,14 @@
     <meta property="og:url"             content="{{ site.url }}{{ page.url }}" />
     
     <meta property="og:image" content="{% if page.post-header == true or page.project-header == true %}{{ site.url }}{{ page.url }}{{ page.header-img }}{% else %}{{ site.url }}{{'/meta/share_image.png'}}{% endif %}">
-
     <meta name="twitter:card" content="summary_large_image"> 
     
     <!-- title -->
-    <meta property="og:title" content="{% if page.url == '/' %}{{ page.subtitle}}{% else %}{{ page.title }}{% endif %}">
-    
-    <meta name="twitter:title" content="{% if page.url == '/' %}{{ page.subtitle}}{% else %}{{ page.title }}{% endif %}">
+    <meta property="og:title" content="{% if page.url == '/' %}{{ page.subtitle }}{% else %}{{ page.title }} | {{ site:title }}{% endif %}">
+    <meta name="twitter:title" content="{% if page.url == '/' %}{{ page.subtitle }}{% else %}{{ page.title }} | {{ site:title }}{% endif %}">
     
     <!-- description -->
-    <meta property="og:description" content="{% if page.main == true %}{{ page.description }}{% else %}{{ page.content | truncatewords: 30 | strip_html }}{% endif %}"/>
-    
+    <meta property="og:description" content="{% if page.main == true %}{{ page.description }}{% else %}{{ site:title }}{% endif %}"/>
     <meta name="twitter:description" content="{% if page.main == true %}{{ page.description }}{% else %}{{ page.content | truncatewords: 30 | strip_html }}{% endif %}">
     
   <!-- CSS -->
