Edit project config

--- a/_sass/_project.scss
+++ b/_sass/_project.scss
@@ -16,7 +16,7 @@
             margin-bottom: 20px;
         }
 
-        .project-organization {
+        .project-platform {
             color: $primary;
             font-size: 18px;
             font-family: $source;
