--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,35 +2,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Post info -->
-
-  {% assign title = {% if page.home == true %}{{ site.title }}{% elsif page.main == true %}{{ page.title }} | {{ page.description }}{% else %}{{ page.title }}{% endif %} %}
-  {% assign description = {% if page.home == true %}{{ page.description }}{% else %}{{ site:title }}{% endif %} %}
-  {% assign thumbnail = {% if page.post-header == true or page.project-header == true %}{{ site.url }}{{ page.url }}{{ page.header-img }}{% else %}{{ site.url }}{{'/meta/meta_image.png'}}{% endif %} %}
-  {% assign url = {% if page.post-header == true or page.project-header == true %}{{ site.url }}{{ page.url }}{% else %}{{ site.url }}{% endif %} %}
-  {% assign type = {% if page.post-header == true or page.project-header == true %}"article"{% else %}"website"{% endif %} %}
-
   <!-- HTML Meta Tags -->
-  <title>{title}</title>
-  <meta name="description" content="{description}">
+  <title>{% if page.home == true %}{{ site.title }}{% elsif page.main == true %}{{ page.title }} | {{ page.description }}{% else %}{{ page.title }}{% endif %}</title>
+  <meta name="description" content="{% if page.home == true %}{{ page.description }}{% else %}{{ site:title }}{% endif %}">
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="{title}">
-  <meta itemprop="description" content="{description}">
-  <meta itemprop="image" content="{thumbnail}">
+  <meta itemprop="name" content="{% if page.home == true %}{{ site.title }}{% elsif page.main == true %}{{ page.title }} | {{ page.description }}{% else %}{{ page.title }}{% endif %}">
+  <meta itemprop="description" content="{% if page.home == true %}{{ page.description }}{% else %}{{ site:title }}{% endif %}">
+  <meta itemprop="image" content="{% if page.post-header == true or page.project-header == true %}{{ site.url }}{{ page.url }}{{ page.header-img }}{% else %}{{ site.url }}{{'/meta/meta_image.png'}}{% endif %}">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="{url}">
-  <meta property="og:type" content="{type}">
-  <meta property="og:title" content="{title}">
-  <meta property="og:description" content="{description}">
-  <meta property="og:image" content="{thumbnail}">
+  <meta property="og:url" content="{% if page.post-header == true or page.project-header == true %}{{ site.url }}{{ page.url }}{% else %}{{ site.url }}{% endif %}">
+  <meta property="og:type" content="{% if page.post-header == true or page.project-header == true %}"article"{% else %}"website"{% endif %}">
+  <meta property="og:title" content="{% if page.home == true %}{{ site.title }}{% elsif page.main == true %}{{ page.title }} | {{ page.description }}{% else %}{{ page.title }}{% endif %}">
+  <meta property="og:description" content="{% if page.home == true %}{{ page.description }}{% else %}{{ site:title }}{% endif %}">
+  <meta property="og:image" content="{% if page.post-header == true or page.project-header == true %}{{ site.url }}{{ page.url }}{{ page.header-img }}{% else %}{{ site.url }}{{'/meta/meta_image.png'}}{% endif %}">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="{title}">
-  <meta name="twitter:description" content="{description}">
-  <meta name="twitter:image" content="{thumbnail}">
+  <meta name="twitter:title" content="{% if page.home == true %}{{ site.title }}{% elsif page.main == true %}{{ page.title }} | {{ page.description }}{% else %}{{ page.title }}{% endif %}">
+  <meta name="twitter:description" content="{% if page.home == true %}{{ page.description }}{% else %}{{ site:title }}{% endif %}">
+  <meta name="twitter:image" content="{% if page.post-header == true or page.project-header == true %}{{ site.url }}{{ page.url }}{{ page.header-img }}{% else %}{{ site.url }}{{'/meta/meta_image.png'}}{% endif %}">
   
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
