--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="{% if page.post-header == true or page.project-header == true %}{{ site.url }}{{ page.url }}{% else %}{{ site.url }}{% endif %}">
-  <meta property="og:type" content="{% if page.post-header == true or page.project-header == true %}"article"{% else %}"website"{% endif %}">
+  <meta property="og:type" content="{% if page.post-header == true or page.project-header == true %}article{% else %}website{% endif %}">
   <meta property="og:title" content="{% if page.home == true %}{{ site.title }}{% elsif page.main == true %}{{ page.title }} | {{ page.description }}{% else %}{{ page.title }}{% endif %}">
   <meta property="og:description" content="{% if page.home == true %}{{ page.description }}{% else %}{{ site:title }}{% endif %}">
   <meta property="og:image" content="{% if page.post-header == true or page.project-header == true %}{{ site.url }}{{ page.url }}{{ page.header-img }}{% else %}{{ site.url }}{{'/meta/meta_image.png'}}{% endif %}">
