--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
     <main>
       {{ content }}
 
-      {% if page.comments %}
+      {% if page.draft != true && page.comments %}
           <div class="comments">
               <div id="disqus_thread"></div>
               <script>
