--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -277,10 +277,9 @@
     
     .catalogue-draft-message {
         text-align: center;
-        margin: 25px 0;
+        margin: 10px 0 50px 0;
         width: 100%;
         padding: 32px 0;
-        border: 1px solid $grey-2;
         border-radius: 6px;
         font-size: 16px;
         color: $grey-0;
