--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,15 +14,15 @@ layout: default
                 {{ page.type }}
             </div>
         </div>
-        <h1 class="post-title">
+        <div class="post-title">
             {{ page.title }}
-        </h1>
-        <h2 class="post-subtitle">
+        </div>
+        <div class="post-subtitle">
             {{ page.subtitle }}
-        </h2>
-        <h2 class="post-date">
+        </div>
+        <div class="post-date">
             {{ page.date }}
-        </h2>
+        </div>
     </div>
 
     <!--draft 일 때-->
