--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,138 +2,180 @@
   margin: 40px auto;
   max-width: 750px;
   width: 80%;
-    @media (max-width: $break-small) {
-        width: 88%;
-        margin: 24px auto;
-    }
+  @media (max-width: $break-small) {
+    width: 88%;
+    margin: 24px auto;
+  }
 }
 
-main,
-footer>.footer_wrap,
-.nav-container {
+main, footer>.footer_wrap, .nav-container {
   margin: 0 auto;
   max-width: 750px;
   width: 80%;
-    @media (max-width: $break-small) {
-        width: 88%;
-    }
+  @media (max-width: $break-small) {
+    width: 88%;
+  }
 }
 
 .nav {
-    overflow: auto;
-    padding: 24px 0;
+  overflow: auto;
+  padding: 24px 0;
 
   &-container {
-      margin: 0 auto;
-      padding-bottom: 10px;
-      position: relative;
+    margin: 0 auto;
+    padding-bottom: 10px;
+    position: relative;
   }
 }
 
-  ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-  }
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
 
 
 .nav-container {
   li {
-      font-family: $source;
-      display: inline-block;
-      margin: 0 40px 0 0;
-      
-      &:last-child {
-          margin-right: 0;
-      }
-      
-      @media (max-width: $break-small) {
-          margin: 0 24px 0 0;
-          font-size: 16px;
-      }
-      
-  }
-    li:hover {
-          opacity: 0.5;
+    font-family: $source;
+    display: inline-block;
+    margin: 0 40px 0 0;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 15px;
+
+    &:last-child {
+      margin-right: 0;
     }
+
+    @media (max-width: $break-small) {
+      margin: 0 24px 0 0;
+      font-size: 16px;
+    }
+
+  }
+  li:hover {
+    opacity: 0.5;
+  }
 }
-    
+
 .active {
-    padding-bottom: 6px;
-    border-bottom: 2px solid $grey-0;
-    font-weight: 700;
-    color: $grey-0;
+  padding-bottom: 6px;
+  font-weight: 700;
+  color: $primary;
 }
 
 .normal {
-    font-weight: 500;
-    border-style: none;
-    padding-bottom: 0;
+  // font-weight: 500;
+  border-style: none;
+  padding-bottom: 0;
 }
 
 a {
 //    color: $grey-0;
 }
 
+//aside
+.toc {
+  position: fixed;
+  top: 112px;
+  right: 0;
+  width: 240px;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  color: rgb(134, 142, 150);
+  line-height: 1.5;
+  font-size: 0.875rem;
+  max-height: calc(100vh - 128px);
+  overflow-y: auto;
+  overflow-x: hidden;
+  border-left: 2px solid rgb(233, 236, 239);
+
+  &::-webkit-scrollbar {
+    width: 2px;
+    border-radius: 1px;
+    background: rgb(241, 243, 245);
+  }
+  &::-webkit-scrollbar-thumb {
+    z-index: 100;
+    background: rgb(52, 58, 64);
+  }
+
+  li:nth-child(1) a:nth-child(1) {
+    // color: rgb(33, 37, 41);
+    color: red
+    transform: scale(1.05);
+    transition: all 0.125s ease-in 0s;
+  }
+
+  .toc-anchor {
+    color: rgb(134, 142, 150);
+    line-height: 1.5;
+    font-size: 0.875rem;
+  }
+}
+
 //footer
 
 footer {
-    font-family: $source;
-    padding: 36px 0 46px 0;
-    background-color: $grey-3;
-    color: $default-tint;
-    border-top: 1px solid $grey-2;
-    border-bottom: 1px solid $grey-2;
-    
-    .footer_wrap {
-        font-style: normal;
-        position: relative;
+  font-family: $source;
+  padding: 36px 0 46px 0;
+  background-color: $grey-3;
+  color: $default-tint;
+  border-top: 1px solid $grey-2;
+  border-bottom: 1px solid $grey-2;
 
-        .information {
-            display: inline-block;
+  .footer_wrap {
+    font-style: normal;
+    position: relative;
 
-            .myname {
-                font-size: 20px;
-                font-weight: 600;
-                margin-bottom: 4px;
-}
-            .email {
-                font-size: 16px;
-                color: $default-tint;
-            }
-            
-            a.email:hover {
-                opacity: .6;
-            }
-            
-            .accounts {
-                margin-top: 36px;
-                a {
-                    margin-right: 24px;
-                    svg {
-                        fill: $default-tint;
-                        width: 20px;
-                    }
-                }
-                a:hover {
-                    opacity: .6;
-                }
-            }
+    .information {
+      display: inline-block;
+
+      .myname {
+        font-size: 20px;
+        font-weight: 600;
+        margin-bottom: 4px;
+      }
+      .email {
+        font-size: 16px;
+        color: $default-tint;
+      }
+
+      a.email:hover {
+        opacity: .6;
+      }
+
+      .accounts {
+        margin-top: 36px;
+        a {
+          margin-right: 24px;
+          svg {
+            fill: $default-tint;
+            width: 20px;
+          }
         }
-        .copyright {
-            float: right;
-            position: absolute;
-            right: 0;
-            bottom: 2px;
-
-            @media (max-width: $break-small) {
-                float: none;
-                position: static;
-                margin-top: 6px;
-            }
-            span {
-                font-size: 16px;
-            }
+        a:hover {
+          opacity: .6;
         }
+      }
     }
+    .copyright {
+      float: right;
+      position: absolute;
+      right: 0;
+      bottom: 2px;
+
+      @media (max-width: $break-small) {
+        float: none;
+        position: static;
+        margin-top: 6px;
+      }
+      span {
+        font-size: 16px;
+      }
+    }
+  }
 }
