--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -30,7 +30,7 @@ $break-small: 670px;
 // font-family 정의
 $san-serif: "Source Sans Pro", "APPLE SD Gothic Neo", HelveticaNeue, Helvetica, "NanumGothic", "맑은 고딕", "Malgun Gothic", arial, sans-serif;
 $serif: "Nanum Myeongjo",sans-serif;
-$source: 'Source Sans Pro', sans-serif;
+$source: $san-serif;
 
 $monospaced-font: Menlo, Monaco, monospace;
 $code-color: #bf616a;
