--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
             <div class="myname">
                 {{ site.title }}
             </div>
-            <a href="mailto:iam.leejihye@gmail.com" class="email">
+            <a href="mailto:iscowkite@gmail.com" class="email">
                 {{ site.email }}
             </a>
             <div class="accounts">
