--- a/_includes/home.html
+++ b/_includes/home.html
@@ -8,7 +8,7 @@
     </div>
     <ul>
         {% for experience in site.data.home_experience %}
-            <li class="workplace transition">
+            <li class="workplace">
                 <p class="workplace-name">
                     {{ experience.name }}
                 </p>
