--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -1,4 +1,4 @@
-<li class="catalogue-item">
+<li class="catalogue-item loading-animation">
     <a href="{{ page.url | prepend: site.baseurl }}" >
         {% if page.portfolio == true %}
         <img src="{{ page.main-img }}" class="catalogue-img"/>
