--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -7,7 +7,7 @@ code {
   background-color: $grey-4;
   border-radius: 3px;
   color: $primary;
-  font-size: 85%;
+  font-size: 0.8em;
   padding: .2em .4em;
 }
 
