--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -1,29 +1,30 @@
 <li class="catalogue-item loading-animation">
-    <a href="{{ page.url | prepend: site.baseurl }}" >
-        {% if page.portfolio == true %}
-        <img src="{{ page.main-img }}" class="catalogue-img"/>
-        {% endif %}
-        {% if page.draft == true %}
-        <span class="catalogue-tag">
+`  <a href="{{ page.url | prepend: site.baseurl }}">
+    <div class="catalogue-info-wrap">
+      {% if page.draft == true %}
+      <span class="catalogue-tag">
             Coming Soon
         </span>
-        {% endif %}
-        <p class="catalogue-type">
-            {{ page.type }}
+      {% endif %}
+      <p class="catalogue-type">
+        {{ page.type }}
+      </p>
+      <div class="catalogue-info transition">
+        <h1 class="catalogue-title">
+          {{ page.title }}
+        </h1>
+        <p class="catalogue-sub">
+          {{ page.subtitle }}
         </p>
-        <div class="catalogue-info transition">
-            <h1 class="catalogue-title">
-                {{ page.title }}
-            </h1>
-            <p class="catalogue-sub">
-                {{ page.subtitle }}
-            </p>
-            <p class="catalogue-date">
-                {{ page.date }}
-            </p>
-            <p class="catalogue-body">
-                {{ page.content | truncatewords: 24 | strip_html }}
-            </p>
-        </div>
-    </a>
-</li>    
+        <p class="catalogue-date">
+          {{ page.date }}
+        </p>
+        <p class="catalogue-body">
+          {{ page.content | truncatewords: 24 | strip_html }}
+        </p>
+      </div>
+    </div>
+
+    <img class="catalogue-img" src="{{ page.url | prepend: site.baseurl | append: page.header-img }}"/>
+  </a>
+</li>
