--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -5,11 +5,11 @@
     font-weight: 600;
     color: $primary;
     vertical-align: middle;
-    
+
     .label-emoji {
         font-size: 26px;
     }
-    
+
 }
 
 div.resume-info {
@@ -23,29 +23,28 @@ div.resume-info {
 }
 
 .resume {
-    
     .workplace {
         width: 100%;
         padding: 30px 0;
         border-top: 1px solid rgba(0,0,0,.07);
-        
+
         .workplace-name {
             font-family: $san-serif;
-            font-size: 20px;
+            font-size: 18px;
             font-weight: 700;
             width: 42%;
             float: left;
-            
+
             @media (max-width: $break-small) {
                 float: none;
                 width: 100%;
             }
-            
+
         }
 
         .work-info {
             display: inline-block;
-            
+
             p.work-sub-info {
                 color: $default-tint;
                 font-size: 16px;
@@ -53,31 +52,35 @@ div.resume-info {
                 font-weight: 400;
             }
         }
-        
+
         svg {
             width: 24px;
             float: right;
         }
     }
-    
+
     .workplace:last-child {
         border-bottom: 1px solid rgba(0,0,0,.07);
     }
-    
+
     a {
         .view-all-projects {
             display: inline-block;
             color: $default-tint;
-            font-size: 18px;
+            font-size: 16px;
             font-family: $source;
             font-weight: 600;
             margin: 20px 0;
-            
+
             svg {
                 width: 20px;
                 fill: $default-tint;
                 vertical-align: middle;
                 margin-left: 6px;
+            }
+
+            @media (max-width: $break-small) {
+                font-size: 14px;
             }
         }
     }
@@ -93,15 +96,20 @@ section.skill {
         position: absolute;
     }
     padding-bottom: 72px;
-    
+
     li.skill_name {
         display: inline-block;
         font-family: $source;
         padding: 4px 14px;
         border-radius: 100px;
         border: solid 1px $grey-2;
-        font-size: 16px;
+        font-size: 14px;
         margin: 0 8px 14px 0;
+
+        @media (max-width: $break-small) {
+            font-size: 13px;
+            margin: 0 4px 8px 0;
+        }
     }
 }
 
